--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-tilt": "^1.0.2",
+    "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.155.0"
+    "three": "^0.155.0",
+    "tsparticles": "^2.12.0",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
