--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.15.0",
     "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.155.0",
     "tsparticles": "^2.12.0",
